--- a/src/email/templates/dailyReport.html
+++ b/src/email/templates/dailyReport.html
@@ -1066,8 +1066,10 @@
                         <div
                           style="font-family:Montserrat,Arial,sans-serif;font-size:13px;line-height:20px;text-align:left;color:#000000;">
                           <p style="Margin:0;"><span
-                              style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#182d55;line-height:20px;">Questions?
-                              Drop us a line at</span></p>
+                              style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#182d55;line-height:20px;">If you need support please contact:  </span><a href="mailto:support@Doorcounts.com"
+                                style="display:inline-block;width:189px;background:transparent;color:#ffffff;font-family:Montserrat,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:100%;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0;border-radius:0;"
+                                target="_blank"> <span
+                                  style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#bad35a;line-height:20px;"> support@Doorcounts.com</span></a></p>
                         </div>
                       </td>
                     </tr>
@@ -1108,10 +1110,7 @@
                             <tr>
                               <td align="center" bgcolor="transparent"
                                 style="border:none;border-radius:0;cursor:auto;mso-padding-alt:0;background:transparent;"
-                                valign="middle"> <a href="mailto:cardsupport@Indevs.com"
-                                  style="display:inline-block;width:189px;background:transparent;color:#ffffff;font-family:Montserrat,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:100%;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0;border-radius:0;"
-                                  target="_blank"> <span
-                                    style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#bad35a;line-height:20px;">cardsupport@Indevs.com</span></a>
+                                valign="middle"> 
                               </td>
                             </tr>
                           </tbody>
