--- a/src/email/templates/welcome.html
+++ b/src/email/templates/welcome.html
@@ -906,10 +906,10 @@
                             <tr>
                               <td align="center" bgcolor="transparent"
                                 style="border:none;border-radius:0;cursor:auto;mso-padding-alt:0;background:transparent;"
-                                valign="middle"> <a href="mailto:cardsupport@Indevs.com"
+                                valign="middle"> <a href="mailto:support@Indevs.com"
                                   style="display:inline-block;width:189px;background:transparent;color:#ffffff;font-family:Montserrat,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:100%;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0;border-radius:0;"
                                   target="_blank"> <span
-                                    style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#1babe2;line-height:20px;">cardsupport@Indevs.com</span></a>
+                                    style="mso-line-height-rule:exactly;font-size:13px;font-family:Montserrat,Arial,sans-serif;font-weight:500;color:#1babe2;line-height:20px;">support@Indevs.com</span></a>
                               </td>
                             </tr>
                           </tbody>
